@@ -27,6 +27,8 @@ TODO - Release blockers - Must implement before this release can be finally fini
      and pmd-java:typeof).
 
 
+Fixed bug 1503099: InefficientStringBuffering bug false +
+Fixed bug 3109408: String.InefficientStringBuffering false +
 Fixed bug 3424397: Unable to parse
 Fixed bug 3530124: pmd: parsing of generic method call with super fails
 Fixed bug 3496028: pmd-4.2.6: MissingBreakInSwitch fails to report violation
